--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # .env.backend は volumes でマウントするので、ここでは COPY しない
 COPY . .
 
+ENV PYTHONPATH=/app
+
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
