--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,23 @@
 version: '3.8'
 
 services:
+  db:
+    image: mysql:8.4
+    container_name: konamon_mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DB}
+      TZ: Asia/Tokyo
+    ports:
+      - "${MYSQL_PORT}:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u${MYSQL_USER}", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
   backend:
     build:
       # プロジェクトルート(konamon-master)をビルドの基準点にします
@@ -16,6 +33,9 @@ services:
     working_dir: /code # コンテナ内での作業場所を/codeに設定します
     env_file: # プロジェクトルートにある .env.backend を読み込む
       - ./.env.backend # .env.backendはプロジェクトルートにあるので、./で指定
+    depends_on:
+      db:
+        condition: service_healthy
 
   frontend:
     build:
@@ -31,3 +51,6 @@ services:
       - ./.env.frontend # .env.frontendはプロジェクトルートにあるので、./で指定
     depends_on:
       - backend # フロントエンドはバックエンドAPIの準備を待つように指定
+
+volumes:
+  dbdata:
